...
    <string name="driver_vehicle_information_description">To qualify you must be 21 years of age and have a vehicle that meets the following requirements:</string>
    <string name="driver_vehicle_information_required_year">2001 or newer</string>
    <string name="driver_vehicle_information_required_doors">4 doors</string>
    <string name="driver_vehicle_information_required_not_salvage">Not salvaged</string>
    <string name="driver_clear_photo">Are you sure your Driver Profile Photo clearly shows your face and eyes without sunglasses?</string>

    <string name="title_driver_photo">Your Driver Photo</string>
    <string name="title_driver_license">Driver License</string>
    <string name="title_driver_tnc_sticker">Auto Inspection Sticker</string>
    <string name="title_driver_insurance">Insurance</string>
    <string name="title_terms_and_conditions">Terms and Conditions</string>
    <string name="title_driver_vehicle_information">Vehicle Information</string>
    <string name="title_driver_year">Year</string>
    <string name="title_driver_make">Make</string>
...
    <string name="licence_place">Licence place</string>
    <string name="driver_licence_expiration_date">Expiration Date:</string>
    <!-- driver -->
    <string name="register_driver">Register as a driver</string>
    <string name="register_driver_sucess">Thank you for your application! We will reach out to you soon regarding next steps.</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>

    <string name="rating_feedback_message_text">What feedback would you give %s</string>

    <string name="driver_info">Interested in\nbecoming a driver?</string>
    <string name="coming_soon">Coming soon, please be patient</string>
    <string name="license_confirm">Have you had your license for at least ONE year?</string>
...
